# haskell-thrift-demo

./: .gitignore  README  generation.bash  stack.yaml  thrift-exploration.cabal
app/: GreetingClient.hs  GreetingServer.hs  HdfsClientExample.hs
resources/: greet.thrift  hadoopfs.thrift
